Fix all sorts of InteliJ warnings, stop making my scroll-bar yellow!